Analysis test data and adoptions to make it run

--- a/data_US.ipynb
+++ b/data_US.ipynb
@@ -5548,6 +5548,201 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "f51c999c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Indexcd</th>\n",
+       "      <th>IndexName</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Clsidx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>IXUT</td>\n",
+       "      <td>NQ Telecommunications</td>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>191.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>IXIS</td>\n",
+       "      <td>NQ Insurance</td>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>3285.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>IXF</td>\n",
+       "      <td>NQ Financial 100</td>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>2766.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>NBI</td>\n",
+       "      <td>NQ Biotechnology</td>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>742.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>IXK</td>\n",
+       "      <td>NQ Computer</td>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>924.84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Indexcd              IndexName     Date   Clsidx\n",
+       "49    IXUT  NQ Telecommunications  2005-01   191.90\n",
+       "51    IXIS           NQ Insurance  2005-01  3285.48\n",
+       "52     IXF       NQ Financial 100  2005-01  2766.90\n",
+       "57     NBI       NQ Biotechnology  2005-01   742.54\n",
+       "70     IXK            NQ Computer  2005-01   924.84"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasdaq_composite_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "92141eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ us_index.csv gespeichert: 1047 Zeilen\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>2005-01-07</td>\n",
+       "      <td>2088.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>2005-01-14</td>\n",
+       "      <td>2087.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427</th>\n",
+       "      <td>2005-01-21</td>\n",
+       "      <td>2034.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>647</th>\n",
+       "      <td>2005-01-28</td>\n",
+       "      <td>2035.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>794</th>\n",
+       "      <td>2005-02-04</td>\n",
+       "      <td>2086.66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date    Close\n",
+       "85  2005-01-07  2088.61\n",
+       "253 2005-01-14  2087.91\n",
+       "427 2005-01-21  2034.27\n",
+       "647 2005-01-28  2035.83\n",
+       "794 2005-02-04  2086.66"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Helper-Funktion: ISO-Jahr/Woche → tatsächlicher Freitag (Wochentag=5)\n",
+    "def iso_yearweek_to_friday(y, w):\n",
+    "    return pd.Timestamp.fromisocalendar(int(y), int(w), 5)\n",
+    "\n",
+    "# === USA: Nasdaq Composite (Indexcd = IXIC) ===\n",
+    "us = friday_df.loc[friday_df['Indexcd'] == 'IXIC', ['Date', 'Clsidx']].dropna().copy()\n",
+    "\n",
+    "# Spalte Date (\"YYYY-WW\") in Jahr/Woche zerlegen → echtes Datum (Freitag)\n",
+    "us[['Year', 'Week']] = us['Date'].astype(str).str.split('-', expand=True).astype(int)\n",
+    "us['Date'] = us.apply(lambda r: iso_yearweek_to_friday(r['Year'], r['Week']), axis=1)\n",
+    "\n",
+    "# Einheitliche Spalten und Sortierung\n",
+    "us = us[['Date', 'Clsidx']].rename(columns={'Clsidx': 'Close'}).sort_values('Date').drop_duplicates('Date')\n",
+    "\n",
+    "# Speichern\n",
+    "us.to_csv('us_index.csv', index=False)\n",
+    "print(f\"✅ us_index.csv gespeichert: {len(us)} Zeilen\")\n",
+    "display(us.head())\n"
+   ]
   }
  ],
  "metadata": {
