--- a/data_CN.ipynb
+++ b/data_CN.ipynb
@@ -2959,6 +2959,111 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8f6b68cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ cn_index.csv gespeichert: 1766 Zeilen\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1991-01-04</td>\n",
+       "      <td>131.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1991-01-11</td>\n",
+       "      <td>134.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1991-01-18</td>\n",
+       "      <td>134.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1991-01-25</td>\n",
+       "      <td>132.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1991-02-01</td>\n",
+       "      <td>129.51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date   Close\n",
+       "0 1991-01-04  131.44\n",
+       "1 1991-01-11  134.60\n",
+       "2 1991-01-18  134.24\n",
+       "3 1991-01-25  132.05\n",
+       "4 1991-02-01  129.51"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Helper-Funktion: ISO-Jahr/Woche → tatsächlicher Freitag (Wochentag=5)\n",
+    "def iso_yearweek_to_friday(y, w):\n",
+    "    return pd.Timestamp.fromisocalendar(int(y), int(w), 5)\n",
+    "\n",
+    "\n",
+    "# === China: SSE Composite (IndexCode = 000001) ===\n",
+    "cn = merged_weekly.loc[merged_weekly['IndexCode'] == '000001', ['Date', 'Closing']].dropna().copy()\n",
+    "\n",
+    "# Spalte Date (\"YYYY-WW\") in Jahr/Woche zerlegen → echtes Datum (Freitag)\n",
+    "cn[['Year', 'Week']] = cn['Date'].astype(str).str.split('-', expand=True).astype(int)\n",
+    "cn['Date'] = cn.apply(lambda r: iso_yearweek_to_friday(r['Year'], r['Week']), axis=1)\n",
+    "\n",
+    "# Einheitliche Spalten und Sortierung\n",
+    "cn = cn[['Date', 'Closing']].rename(columns={'Closing': 'Close'}).sort_values('Date').drop_duplicates('Date')\n",
+    "\n",
+    "# Speichern\n",
+    "cn.to_csv('cn_index.csv', index=False)\n",
+    "print(f\"✅ cn_index.csv gespeichert: {len(cn)} Zeilen\")\n",
+    "display(cn.head())\n"
+   ]
   }
  ],
  "metadata": {
